# SrikurCHIP-8

./: .gitignore  CHIP-8 Emulator.sln  CHIP-8 Emulator.vcxproj  CHIP-8 Emulator.vcxproj.filters  chip8.cpp  chip8.h  gpu.cpp  gpu.h  includes.h  main.cpp
c++/: chip8.cpp
cpp/: CMakeLists.txt  SrikurCHIP8  cpu.cpp  cpu.h  main.cpp
java/: pom.xml
java/src/main/java/org/srikur/: CPU.java  Main.java
python/: cpu.py  main.py
swift/SrikurCHIP-8/SrikurCHIP-8/: AppDelegate.swift  CPU.swift  Emulator.swift  GameScene.sks  ViewController.swift
swift/SrikurCHIP-8/SrikurCHIP-8.xcodeproj/: project.pbxproj
swift/SrikurCHIP-8/SrikurCHIP-8.xcodeproj/project.xcworkspace/xcuserdata/srikur.xcuserdatad/: UserInterfaceState.xcuserstate
swift/SrikurCHIP-8/SrikurCHIP-8.xcodeproj/xcshareddata/xcschemes/: SrikurCHIP-8.xcscheme
swift/SrikurCHIP-8/SrikurCHIP-8.xcodeproj/xcuserdata/srikur.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/SrikurCHIP-8/SrikurCHIP-8/Base.lproj/: Main.storyboard
